b=499805; focus broken in dialogs/popups on Windows CE; r=enndeakin